# skills

./: .gitignore  CLAUDE.md  LICENSE  README.md
babel/: SKILL.md
babel/scripts/: extract_last.py  test_extract_last.py
bible-bread/: SKILL.md
bible-bread-workspace/iteration-1/: benchmark.json  benchmark.md
bible-bread/evals/: evals.json
bible-buddy/: SKILL.md  pyproject.toml
bible-buddy-workspace/: fact-check-results.md  trigger-eval.json
bible-buddy-workspace/iteration-3/: baseline-biases-timing.json  benchmark.md
bible-buddy-workspace/iteration-5/: benchmark.json  review.html
bible-buddy/evals/: evals.json
bible-buddy/references/: anachronism-timeline.md  aramaic-key-terms.md  archaeological-sources.md  church-practices.md  commonly-misread-passages.md  denomination-claims.md  fun-facts.md  greek-key-terms.md  hebrew-key-terms.md  model-default-biases.md  scripture-to-denomination.md  second-temple-timeline.md  translation-bias.md  verdict-summary.md  yeshua-hermeneutics.md
bible-fact-check/: SKILL.md
daily-bread/: SKILL.md
daily-bread-workspace/: trigger-eval.json
forti-vpn-macos/: SKILL.md
humanizer-zh-tw/: SKILL.md
know-your-unknowns/: SKILL.md
learn-tw/: SKILL.md  pyproject.toml
learn-tw/evals/: evals.json
learn-tw/scripts/: md_to_html.py
learn-tw/tests/: test_md_to_html.py
markdown-to-html/: SKILL.md  pyproject.toml
markdown-to-html/scripts/: md_to_html.py
markdown-to-html/tests/: test_md_to_html.py  test_mobile_toc.py  test_scrollspy_click.py
prd-tw/: SKILL.md
translate-last/: SKILL.md
weather-hint-tw/: SKILL.md
(+343 files in other folders)
